--- a/frontend/web/css/chitietnhathau.css
+++ b/frontend/web/css/chitietnhathau.css
@@ -281,7 +281,6 @@
       -ms-flex-align: center;
           align-items: center;
   margin-right: 40px;
-<<<<<<< HEAD
   position: relative;
 }
 .site51_prodel_col12_chitietnhathau .container_fix .pro_detail .detail_right .content .item-options .star::before {
@@ -292,8 +291,6 @@
   height: 11px;
   top: 4px;
   right: -20px;
-=======
->>>>>>> b388e27f6f1ed7798447ba2908fb3cdeff64e948
 }
 .site51_prodel_col12_chitietnhathau .container_fix .pro_detail .detail_right .content .item-options .star .icon {
   margin-right: 12px;
@@ -318,6 +315,12 @@
 }
 .site51_prodel_col12_chitietnhathau .container_fix .pro_detail .detail_right .contact_info .contact_row {
   margin-bottom: 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.site51_prodel_col12_chitietnhathau .container_fix .pro_detail .detail_right .contact_info .contact_row:last-child {
+  margin-bottom: 0;
 }
 .site51_prodel_col12_chitietnhathau .container_fix .pro_detail .detail_right .contact_info .contact_row a {
   color: #4F4F4F;
@@ -326,6 +329,7 @@
   color: #289300;
   margin-right: 16px;
   font-size: 19px;
+  width: 18px;
 }
 .site51_prodel_col12_chitietnhathau .container_fix .pro_detail .detail_right .contact_info .contact_row img {
   margin-right: 16px;
@@ -336,6 +340,9 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+}
+.site51_prodel_col12_chitietnhathau .container_fix .pro_detail .detail_right .contact_info .contact_row .contact_flex .flex {
+  margin-bottom: 16px;
 }
 .site51_prodel_col12_chitietnhathau .container_fix .pro_detail .detail_right .contact_info .contact_row .contact_flex .flex:nth-child(1) {
   margin-right: 50px;
@@ -417,10 +424,9 @@
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   cursor: pointer;
-<<<<<<< HEAD
   text-align: center;
-=======
->>>>>>> b388e27f6f1ed7798447ba2908fb3cdeff64e948
+}
+.site51_prodel_col12_chitietnhathau .container_fix .pro_similar .van-tabs blockquote span {
   font-family: Helvetica Neue;
   font-style: normal;
   font-weight: normal;
@@ -430,6 +436,8 @@
   background: #289300;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
+}
+.site51_prodel_col12_chitietnhathau .container_fix .pro_similar .van-tabs .active span {
   font-family: Helvetica Neue bold;
   font-weight: bold;
   color: #FFFFFF;
@@ -475,10 +483,7 @@
   background: #FAFAFA;
   text-transform: uppercase;
   color: #333333;
-<<<<<<< HEAD
   text-align: center;
-=======
->>>>>>> b388e27f6f1ed7798447ba2908fb3cdeff64e948
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -718,21 +723,13 @@
   border: 1px solid #F2F2F2;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-<<<<<<< HEAD
   margin-bottom: 20px;
-=======
->>>>>>> b388e27f6f1ed7798447ba2908fb3cdeff64e948
 }
 .site51_prodel_col12_chitietnhathau .container_fix .pro_main .pro_flex_right .pro_package .pro_flex .pro_card:hover {
   border: 1px solid #289300;
 }
 .site51_prodel_col12_chitietnhathau .container_fix .pro_main .pro_flex_right .pro_package .pro_flex .pro_card a .card_img {
-<<<<<<< HEAD
   height: 196px;
-=======
-  width: 197px;
-  height: 197px;
->>>>>>> b388e27f6f1ed7798447ba2908fb3cdeff64e948
 }
 .site51_prodel_col12_chitietnhathau .container_fix .pro_main .pro_flex_right .pro_package .pro_flex .pro_card a .card_text {
   padding: 15px;
@@ -907,6 +904,17 @@
   overflow: hidden;
   -o-object-fit: cover;
   object-fit: cover;
+}
+.site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .list-item-images .content_viewall {
+  display: none;
+}
+.site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .list-item-images .content_viewall span {
+  color: #289300;
+  margin-right: 10px;
+}
+.site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .list-item-images .content_viewall .far {
+  color: #289300;
+  font-size: 12px;
 }
 .site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .item-loccomt {
   display: -webkit-box;
@@ -1213,7 +1221,7 @@
 }
 .site51_prodel_col12_chitietnhathau .container_fix .pro_slide .slide_pro_active .slick-next {
   right: 10px;
-  top: -30px;
+  top: -33px;
   background: url(./../img/bg_slide.png);
   width: 32px;
   height: 21px;
@@ -1225,7 +1233,7 @@
 }
 .site51_prodel_col12_chitietnhathau .container_fix .pro_slide .slide_pro_active .slick-prev {
   right: 42px;
-  top: -40px;
+  top: -43px;
   background: url(./../img/bg_slide.png);
   width: 32px;
   height: 21px;
@@ -1246,7 +1254,6 @@
   width: 100%;
 }
 
-<<<<<<< HEAD
 #chat-circle {
   cursor: pointer;
 }
@@ -1638,307 +1645,16 @@
   }
 }
 @media (max-width: 1199px) {
-=======
-.chatbox__support {
-  background: #f9f9f9;
-  height: 450px;
-  width: 350px;
-  -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-}
-
-/* HEADER */
-.chatbox__header {
-  background: var(--primaryGradient);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding: 15px 20px;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-  -webkit-box-shadow: var(--primaryBoxShadow);
-          box-shadow: var(--primaryBoxShadow);
-}
-
-.chatbox__image--header {
-  margin-right: 10px;
-}
-
-.chatbox__heading--header {
-  font-size: 1.2rem;
-  color: white;
-}
-
-.chatbox__description--header {
-  font-size: 0.9rem;
-  color: white;
-}
-
-/* Messages */
-.chatbox__messages {
-  padding: 0 20px;
-}
-
-.messages__item {
-  margin-top: 10px;
-  background: #E0E0E0;
-  padding: 8px 12px;
-  max-width: 70%;
-}
-
-.messages__item--visitor,
-.messages__item--typing {
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-  border-bottom-right-radius: 20px;
-}
-
-.messages__item--operator {
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-  border-bottom-left-radius: 20px;
-  background: var(--primary);
-  color: white;
-}
-
-/* FOOTER */
-.chatbox__footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding: 20px 20px;
-  background: var(--secondaryGradient);
-  -webkit-box-shadow: var(--secondaryBoxShadow);
-          box-shadow: var(--secondaryBoxShadow);
-  border-bottom-right-radius: 10px;
-  border-bottom-left-radius: 10px;
-  margin-top: 20px;
-}
-
-.chatbox__footer input {
-  border: none;
-  padding: 10px 10px;
-  border-radius: 30px;
-  text-align: center;
-}
-
-.chatbox__send--footer {
-  color: white;
-}
-
-.chatbox__button button,
-.chatbox__button button:focus,
-.chatbox__button button:visited {
-  padding: 10px;
-  background: white;
-  border: none;
-  outline: none;
-  border-top-left-radius: 50px;
-  border-top-right-radius: 50px;
-  border-bottom-left-radius: 50px;
-  -webkit-box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
-  cursor: pointer;
-}
-
-.messages__item--typing {
-  will-change: transform;
-  width: auto;
-  border-top-right-radius: 20px;
-  border-top-left-radius: 20px;
-  border-bottom-right-radius: 20px;
-  padding: 15px 20px;
-  display: table;
-  margin-right: auto;
-  position: relative;
-  -webkit-animation: 2s bulge infinite ease-out;
-          animation: 2s bulge infinite ease-out;
-}
-
-.messages__item--typing::before,
-.messages__item--typing::after {
-  content: "";
-  position: absolute;
-  bottom: -2px;
-  left: -2px;
-  height: 10px;
-  width: 10px;
-  border-radius: 50%;
-}
-
-.messages__item--typing::after {
-  height: 10px;
-  width: 10px;
-  left: -10px;
-  bottom: -10px;
-}
-
-span.messages__dot {
-  height: 8px;
-  width: 8px;
-  float: left;
-  margin: 0 1px;
-  background-color: #9E9EA1;
-  display: block;
-  border-radius: 50%;
-  opacity: 0.4;
-  -webkit-animation: 1s blink infinite;
-          animation: 1s blink infinite;
-}
-
-@-webkit-keyframes blink {
-  50% {
-    opacity: 1;
-  }
-}
-
-@keyframes blink {
-  50% {
-    opacity: 1;
-  }
-}
-@-webkit-keyframes bulge {
-  50% {
-    -webkit-transform: scale(1.05);
-            transform: scale(1.05);
-  }
-}
-@keyframes bulge {
-  50% {
-    -webkit-transform: scale(1.05);
-            transform: scale(1.05);
-  }
-}
-/* CHATBOX
-=============== */
-.chatbox {
-  position: absolute;
-  bottom: 30px;
-  right: 30px;
-}
-
-/* CONTENT IS CLOSE */
-.chatbox__support {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  background: #eee;
-  width: 300px;
-  height: 350px;
-  z-index: -123456;
-  opacity: 0;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-}
-
-/* CONTENT ISOPEN */
-.chatbox--active {
-  -webkit-transform: translateY(-40px);
-          transform: translateY(-40px);
-  z-index: 123456;
-  opacity: 1;
-}
-
-/* BUTTON */
-.chatbox__button {
-  cursor: pointer;
-  text-align: right;
-}
-
-/* HEADER */
-.chatbox__header {
-  position: sticky;
-  top: 0;
-  background: orange;
-}
-
-/* MESSAGES */
-.chatbox__messages {
-  margin-top: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  overflow-y: scroll;
-  -ms-flex-direction: column-reverse;
-      flex-direction: column-reverse;
-}
-
-.messages__item {
-  background: orange;
-  max-width: 60.6%;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-}
-
-.messages__item--operator {
-  margin-left: auto;
-}
-
-.messages__item--visitor {
-  margin-right: auto;
-}
-
-/* FOOTER */
-.chatbox__footer {
-  position: sticky;
-  bottom: 0;
-}
-
-@media (max-width: 1251px) {
-  .pro_flex .pro_card {
-    width: 237px;
-  }
-}
-@media (max-width: 1199px) {
-  .pro_flex .pro_card {
-    width: 220px;
-  }
-  .pro_flex .pro_card:nth-child(5) {
-    display: none;
-  }
-
->>>>>>> b388e27f6f1ed7798447ba2908fb3cdeff64e948
   .site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .item-top-sdps {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
   }
-  .site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .tongthongso {
-    margin: auto;
-    margin-bottom: 35px;
-  }
   .site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .list-item-images {
-    width: 100%;
+    width: 630px;
+  }
+  .site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .list-item-images .all_image,
+.site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .list-item-images .item-images {
+    display: none;
   }
   .site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .item-comment {
     -ms-flex-wrap: wrap;
@@ -1950,9 +1666,11 @@ span.messages__dot {
   .site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .item-comment .item-chat {
     padding-left: 100px;
   }
-<<<<<<< HEAD
   .site51_prodel_col12_chitietnhathau .container_fix .pro_main .pro_flex_left {
     width: 100%;
+  }
+  .site51_prodel_col12_chitietnhathau .container_fix .pro_main .pro_flex_left .nav_menu .nav_list.active::before {
+    right: 45%;
   }
   .site51_prodel_col12_chitietnhathau .container_fix .pro_main .pro_flex_right {
     width: 100%;
@@ -1973,8 +1691,6 @@ span.messages__dot {
     -o-object-fit: cover;
        object-fit: cover;
   }
-=======
->>>>>>> b388e27f6f1ed7798447ba2908fb3cdeff64e948
 }
 @media (max-width: 991px) {
   .site51_prodel_col12_chitietnhathau .container_fix .pro_detail .detail_left {
@@ -1991,28 +1707,70 @@ span.messages__dot {
     width: 100%;
     margin-left: 0;
   }
-<<<<<<< HEAD
-=======
-
-  .pro_flex .pro_card {
-    width: 30%;
+  .site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .list-item-images {
+    width: 400px;
   }
-  .pro_flex .pro_card:nth-child(4), .pro_flex .pro_card:nth-child(5), .pro_flex .pro_card:nth-child(6), .pro_flex .pro_card:nth-child(7), .pro_flex .pro_card:nth-child(8), .pro_flex .pro_card:nth-child(9), .pro_flex .pro_card:nth-child(10) {
+  .site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .item-loccomt .button-loc button {
+    margin-right: 15px;
+  }
+  .site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .item-loccomt .button-loc button:nth-child(1), .site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .item-loccomt .button-loc button:nth-child(2), .site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .item-loccomt .button-loc button:nth-child(3) {
+    padding: 5px 10px;
+  }
+  .site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .item-loccomt .button-loc button:nth-child(4), .site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .item-loccomt .button-loc button:nth-child(5), .site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .item-loccomt .button-loc button:nth-child(6), .site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .item-loccomt .button-loc button:nth-child(7), .site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .item-loccomt .button-loc button:nth-child(8) {
+    padding: 5px 7px;
+  }
+}
+@media (max-width: 768px) {
+  .site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .item-top-sdps {
+    padding-bottom: 20px;
+  }
+  .site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .tongthongso {
+    width: auto;
+    margin-right: 15px;
+  }
+  .site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .tongthongso .tongquan .star .fa {
+    font-size: 10px;
+  }
+  .site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .tongthongso .chitiet {
     display: none;
   }
->>>>>>> b388e27f6f1ed7798447ba2908fb3cdeff64e948
+  .site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .list-item-images {
+    width: auto;
+  }
+  .site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .list-item-images .content_viewall {
+    display: block;
+  }
+  .site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .item-loccomt {
+    display: none;
+  }
 }
 @media (max-width: 600px) {
   .site51_prodel_col12_chitietnhathau .container_fix .pro_detail .detail_left {
     width: 400px;
+  }
+  .site51_prodel_col12_chitietnhathau .container_fix .pro_similar .van-tabs {
+    height: auto;
+    margin-bottom: 35px;
+  }
+  .site51_prodel_col12_chitietnhathau .container_fix .pro_similar .van-tabs blockquote {
+    padding: 10px;
+  }
+  .site51_prodel_col12_chitietnhathau .container_fix .pro_similar .van-tabs blockquote span {
+    font-size: 17px;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
   }
 }
 @media (max-width: 576px) {
   .site51_prodel_col12_chitietnhathau .container_fix .pro_description_2 .item-comment .item-chat {
     padding-left: 30px;
   }
-<<<<<<< HEAD
   .site51_prodel_col12_chitietnhathau .container_fix .pro_main .pro_flex_left .nav_menu .nav_list {
+    font-size: 14px;
+  }
+  .site51_prodel_col12_chitietnhathau .container_fix .pro_similar .van-tabs blockquote span {
     font-size: 14px;
   }
 
@@ -2024,18 +1782,44 @@ span.messages__dot {
   .chat-logs {
     height: 40vh;
   }
-=======
->>>>>>> b388e27f6f1ed7798447ba2908fb3cdeff64e948
+
+  .site51_prodel_col12_chitietnhathau .container_fix .pro_main .pro_flex_left .nav_menu .continue {
+    display: block;
+  }
+  .site51_prodel_col12_chitietnhathau .container_fix .pro_main .pro_flex_left .nav_menu .back {
+    display: block;
+  }
+  .site51_prodel_col12_chitietnhathau .container_fix .pro_main .pro_flex_left .nav_menu .nav_list {
+    width: 60%;
+    margin: auto;
+    display: none;
+  }
+  .site51_prodel_col12_chitietnhathau .container_fix .pro_main .pro_flex_left .nav_menu .active {
+    display: block;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+  }
 }
 @media (max-width: 460px) {
   .site51_prodel_col12_chitietnhathau .container_fix .pro_detail .detail_left {
     width: 260px;
   }
-<<<<<<< HEAD
+  .site51_prodel_col12_chitietnhathau .container_fix .pro_similar .van-tabs blockquote span {
+    font-size: 12px;
+  }
+  .site51_prodel_col12_chitietnhathau .detail_button {
+    width: 195px;
+    height: 45px;
+  }
 
   .chat-box {
     width: 96%;
   }
-=======
->>>>>>> b388e27f6f1ed7798447ba2908fb3cdeff64e948
 }
