--- a/frontend/web/css/view.css
+++ b/frontend/web/css/view.css
@@ -2953,3 +2953,216 @@ nav .back::before {
     height: 12px;
   }
 }
+
+.profile_pro_item {
+  width: 100%;
+  overflow: hidden;
+  background: #f5f5f5;
+  padding: 20px 0;
+}
+.profile_pro_item .item_left {
+  width: 25%;
+  overflow: hidden;
+  float: left;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+.profile_pro_item .item_left .menu-my-store {
+  float: left;
+  width: 100%;
+  background: #fff;
+  -webkit-box-shadow: 0px 0px 6px #ccc;
+  box-shadow: 0px 0px 6px #ccc;
+  margin-bottom: 30px;
+  border-radius: 5px;
+}
+.profile_pro_item .item_left .menu-my-store .banner-store {
+  float: left;
+  width: 100%;
+  margin-bottom: 0;
+  overflow: hidden;
+  border-radius: 5px;
+  position: relative;
+}
+.profile_pro_item .item_left .menu-my-store .banner-store .fix-img-bg {
+  position: absolute !important;
+  top: 5px;
+  right: 5px;
+  color: #fff;
+  background: #000;
+  border-radius: 50px;
+  padding: 3px 15px 2px 15px;
+  z-index: 10;
+  cursor: pointer;
+}
+.profile_pro_item .item_left .menu-my-store .banner-store .fix-img-bg i {
+  margin-right: 7px;
+}
+.profile_pro_item .item_left .menu-my-store .banner-store img {
+  width: 100%;
+  overflow: hidden;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+.profile_pro_item .item_left .menu-my-store .img-store {
+  float: left;
+  width: 100%;
+  position: relative;
+  margin-bottom: 20px;
+  margin-top: -25px;
+  margin-left: 15px;
+}
+.profile_pro_item .item_left .menu-my-store .img-store .img {
+  float: left;
+  margin-right: 15px;
+  width: 70px;
+  height: 70px;
+  overflow: hidden;
+  border-radius: 4px;
+}
+.profile_pro_item .item_left .menu-my-store .img-store .img img {
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: center;
+  object-position: center;
+  height: 100%;
+  min-width: 100%;
+}
+.profile_pro_item .item_left .menu-my-store .img-store h2 {
+  color: #4a4a4a;
+  font-weight: 600;
+  margin: 35px 0px 2px 0px;
+}
+.profile_pro_item .item_left .menu-my-store .img-store a {
+  color: #989595;
+  cursor: pointer;
+}
+.profile_pro_item .item_left .menu-my-store .menu-bar-store {
+  float: left;
+  width: 100%;
+  background: #fff;
+  outline: none;
+}
+.profile_pro_item .item_left .menu-my-store .menu-bar-store .menu-bar-lv-1 {
+  float: left;
+  width: 100%;
+  position: relative;
+}
+.profile_pro_item .item_left .menu-my-store .menu-bar-store .menu-bar-lv-1 a {
+  float: left;
+  width: 100%;
+  line-height: 30px;
+  background: #fff;
+  margin-bottom: 1px;
+  padding: 5px 15px;
+  color: #000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.profile_pro_item .item_left .menu-my-store .menu-bar-store .menu-bar-lv-1 a img {
+  margin-right: 10px;
+  margin-top: -3px;
+}
+.profile_pro_item .item_left .menu-my-store .menu-bar-store .menu-bar-lv-1 a .count-notinfycation {
+  color: red;
+  padding: 0px;
+  width: 20px;
+  height: 20px;
+  margin-left: 5px;
+  display: inline-block;
+  /* margin-left: 10px; */
+  text-align: center;
+  font-weight: bold;
+}
+.profile_pro_item .item_left .menu-my-store .menu-bar-store .menu-bar-lv-1 span {
+  position: absolute;
+  right: 10px;
+  top: 0px;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  padding-top: 9px;
+  cursor: pointer;
+  -webkit-transition: all 0.5s ease-in-out 0s;
+  transition: all 0.5s ease-in-out 0s;
+}
+.profile_pro_item .item_left .menu-my-store .menu-bar-store .menu-bar-lv-1 .menu-bar-lv-2 {
+  display: unset;
+  position: relative;
+  width: 100%;
+  float: left;
+  padding-left: 35px;
+}
+.profile_pro_item .item_left .menu-my-store .menu-bar-store .menu-bar-lv-1 .menu-bar-lv-2 a {
+  padding: 5px 15px;
+  position: relative;
+  width: 100%;
+  float: left;
+}
+.profile_pro_item .item_right {
+  width: 75%;
+  overflow: hidden;
+  float: left;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.form-create-store {
+  background: #fff;
+  float: left;
+  width: 100%;
+  -webkit-box-shadow: 0px 1px 6px #ccc;
+  box-shadow: 0px 1px 6px #ccc;
+  margin-bottom: 30px;
+}
+.form-create-store .title-form h2 {
+  color: #289300;
+  text-transform: uppercase;
+  margin: 0px;
+  padding: 19px 25px 10px 25px;
+  border-bottom: 1px solid #ebebeb;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-weight: bold;
+}
+.form-create-store .title-form h2 img {
+  margin-right: 10px;
+}
+
+.nice-select {
+  background-color: #fff;
+  border-radius: 5px;
+  border: 1px solid #e8e8e8;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  clear: both;
+  cursor: pointer;
+  display: block;
+  float: left;
+  font-family: inherit;
+  font-size: 14px;
+  font-weight: 400;
+  height: 42px;
+  line-height: 40px;
+  outline: 0;
+  padding-left: 18px;
+  padding-right: 30px;
+  position: relative;
+  text-align: left !important;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  white-space: nowrap;
+  width: auto;
+}
